<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_profile_feed"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:listitem="@layout/item_feed" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group_auth_empty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="tv_profile_feed_auth_empty_label,btn_profile_feed_auth_navigate_posting" />

    <TextView
        android:id="@+id/tv_profile_feed_auth_empty_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="24dp"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.Wable.Body2"
        android:textColor="@color/gray_500"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/label_profile_feed_auth_empty" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_profile_feed_auth_navigate_posting"
        style="@style/Wable.Button.M.S"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/purple_50"
        android:text="@string/label_profile_feed_auth_navigate_posting"
        app:layout_constraintDimensionRatio="5.8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_profile_feed_auth_empty_label" />

    <TextView
        android:id="@+id/tv_profile_feed_member_empty"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="52dp"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.Wable.Body2"
        android:textColor="@color/gray_500"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/label_profile_feed_member_empty" />
</androidx.constraintlayout.widget.ConstraintLayout>
